<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:translationZ="90dp"
    tools:context=".ChildActivity">

    <TextView
        android:id="@+id/textView_label"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/childActivityLabel_text"
        android:textAlignment="center"
        android:textColor="@color/Juli_text"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_box"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/editText_hintFox"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/Juli_ripple"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_label"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck"
        tools:text="@string/editText_message" />

    <Button
        android:id="@+id/button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:backgroundTint="@color/Juli_button"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/button_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/Juli_ripple" />

    <TextView
        android:id="@+id/textView_chat"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginBottom="130dp"
        android:text="@string/textView_theySay"
        android:textAlignment="center"
        android:textSize="16sp"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/imageText_cat"
        android:scaleX="-1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cat2" />

</androidx.constraintlayout.widget.ConstraintLayout>